过滤无文字层 PDF 并限制设备工具重试